// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebhookTestModal should WebhookTestModal match a snapshot 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Component
    afterClose={[MockFunction]}
    closeModal={[MockFunction]}
    visible={true}
    webhookId="webhookId"
  >
    <Component
      afterClose={[MockFunction]}
      renderChildren={true}
      visible={true}
    />
  </Component>
</Provider>
`;

exports[`WebhookTestModal should WebhookTestResultModal match a snapshot 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Component>
    <Component
      renderChildren={true}
      visible={false}
    />
  </Component>
</Provider>
`;
